<?xml version="1.0" encoding="utf-8"?>

<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img0"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:contentDescription="@string/img0"
            app:srcCompat="@android:color/holo_blue_bright" />

        <ImageView
            android:id="@+id/img1"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/img1"
            app:srcCompat="@android:color/holo_blue_dark" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/img2"
            app:srcCompat="@android:color/holo_blue_light" />

        <ImageView
            android:id="@+id/img3"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/img3"
            app:srcCompat="@android:color/holo_green_dark" />

        <ImageView
            android:id="@+id/img4"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/img4"
            app:srcCompat="@android:color/holo_green_light" />

        <ImageView
            android:id="@+id/img5"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/img5"
            app:srcCompat="@android:color/holo_orange_dark" />

        <ImageView
            android:id="@+id/img6"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/img6"
            app:srcCompat="@android:color/holo_orange_light" />

        <ImageView
            android:id="@+id/img7"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/img7"
            app:srcCompat="@android:color/holo_red_dark" />

        <ImageView
            android:id="@+id/img8"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/img8"
            app:srcCompat="@android:color/holo_red_light" />

        <ImageView
            android:id="@+id/img9"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/img9"
            app:srcCompat="@android:color/white" />

        <ImageView
            android:id="@+id/img10"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/img10"
            app:srcCompat="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/img11"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/img11"
            app:srcCompat="@android:color/black" />
    </LinearLayout>
</HorizontalScrollView>