<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image0"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/image1"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/photo1" />

        <ImageView
            android:id="@+id/image1"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/image2"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/photo2" />

        <ImageView
            android:id="@+id/image2"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/image3"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/photo3" />

        <ImageView
            android:id="@+id/image3"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/image4"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/photo4" />

        <ImageView
            android:id="@+id/image4"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/image5"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/photo5" />
    </LinearLayout>
</HorizontalScrollView>